# context-engineering

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT-PHILOSOPHY.md  README.md  VC-ARCHITECTURE.md
.claude-plugin/: marketplace.json  plugin.json
.claude/docs/: index.md
.claude/state/: STATE.md  plan-fact-first-evolution.md  session-protocol.md
agents/: architect.md  reviewer.md  spike.md
hooks/: hooks.json  post-compact.sh
research/: ce-landscape-2026.md  claude-code-context-engineering.md  context-engineering-landscape.md  context-engineering-overview.md  context-visualizer-concept.md  context-window-internals.md  intra-session-patterns.md  llm-knowledge-base-pattern.md  tui-frameworks-techniques.md  vc-founder-architecture.md
rules/: context-documentation.md  session-cycle.md  standards.md
skills/board/: SKILL.md
skills/bootstrap/: SKILL.md
skills/delivery/: SKILL.md
skills/discover/: SKILL.md
skills/discovery/: SKILL.md
skills/distill/: SKILL.md
skills/fund/: SKILL.md
skills/init/: SKILL.md
skills/invest/: SKILL.md
skills/orchestrate/: SKILL.md
skills/persist/: SKILL.md
skills/plan/: SKILL.md
skills/prototype/: SKILL.md
skills/run/: SKILL.md
templates/: claude-md-root.md  claude-md-snippet.md  hooks-config.json
tools/context-viz/: pyproject.toml
tools/context-viz/src/context_viz/: __init__.py  __main__.py  app.py  app.tcss  cli.py  disk_scanner.py  models.py  tokens.py  transcript.py
tools/context-viz/src/context_viz/widgets/: __init__.py  block_row.py  disk_panel.py  header_bar.py  session_panel.py  session_picker.py
(+19 files in other folders)
