[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-viz"
version = "0.1.0"
description = "Real-time context window visualizer for Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
]

[project.scripts]
context-viz = "context_viz.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/context_viz"]
